Изменены настройки конфигурации Gatling

--- a/src/test/resources/gatling.conf
+++ b/src/test/resources/gatling.conf
@@ -8,26 +8,26 @@ gatling {
   core {
     #outputDirectoryBaseName = "" # The prefix for each simulation result folder (then suffixed by the report generation timestamp)
     #runDescription = ""          # The description for this simulation run, displayed in each report
-    #encoding = "utf-8"           # Encoding to use throughout Gatling for file and string manipulation
+    encoding = "utf-8"           # Encoding to use throughout Gatling for file and string manipulation
     #simulationClass = ""         # The FQCN of the simulation to run (when used in conjunction with noReports, the simulation for which assertions will be validated)
-    #elFileBodiesCacheMaxCapacity = 200        # Cache size for request body EL templates, set to 0 to disable
-    #rawFileBodiesCacheMaxCapacity = 200       # Cache size for request body Raw templates, set to 0 to disable
-    #rawFileBodiesInMemoryMaxSize = 1000       # Below this limit, raw file bodies will be cached in memory
+    #elFileBodiesCacheMaxCapacity = 500        # Cache size for request body EL templates, set to 0 to disable
+    #rawFileBodiesCacheMaxCapacity = 500       # Cache size for request body Raw templates, set to 0 to disable
+    #rawFileBodiesInMemoryMaxSize = 5000       # Below this limit, raw file bodies will be cached in memory
     #pebbleFileBodiesCacheMaxCapacity = 200    # Cache size for request body Peeble templates, set to 0 to disable
     #shutdownTimeout = 5000                    # Milliseconds to wait for the actor system to shutdown
     extract {
       regex {
-        #cacheMaxCapacity = 200 # Cache size for the compiled regexes, set to 0 to disable caching
+        #cacheMaxCapacity = 500 # Cache size for the compiled regexes, set to 0 to disable caching
       }
       xpath {
-        #cacheMaxCapacity = 200 # Cache size for the compiled XPath queries,  set to 0 to disable caching
+        #cacheMaxCapacity = 500 # Cache size for the compiled XPath queries,  set to 0 to disable caching
       }
       jsonPath {
-        #cacheMaxCapacity = 200 # Cache size for the compiled jsonPath queries, set to 0 to disable caching
+        #cacheMaxCapacity = 500 # Cache size for the compiled jsonPath queries, set to 0 to disable caching
         #preferJackson = false  # When set to true, prefer Jackson over Boon for JSON-related operations
       }
       css {
-        #cacheMaxCapacity = 200 # Cache size for the compiled CSS selectors queries,  set to 0 to disable caching
+        #cacheMaxCapacity = 500 # Cache size for the compiled CSS selectors queries,  set to 0 to disable caching
       }
     }
     directory {
@@ -35,7 +35,7 @@ gatling {
       #resources = user-files/resources     # Directory where resources, such as feeder files and request bodies are located (for bundle packaging only)
       #reportsOnly = ""                     # If set, name of report folder to look for in order to generate its report
       #binaries = ""                        # If set, name of the folder where compiles classes are located: Defaults to GATLING_HOME/target.
-      #results = results                    # Name of the folder where all reports folder are located
+      results = results                    # Name of the folder where all reports folder are located
     }
   }
   charting {
